<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.nsvb.catchemall.HelpActivity$HelpFragment" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay" >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/welcome"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/functions1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView2"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin"
                android:layout_below="@+id/textView2"
                android:id="@+id/spacer1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/functions2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView3"
                android:layout_below="@+id/spacer1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/functions3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/open_file_picker"
                android:layout_below="@+id/textView3"
                android:maxWidth="@dimen/max_width"
                android:layout_centerHorizontal="true"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin"
                android:layout_below="@+id/open_file_picker"
                android:id="@+id/spacer2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/functions4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView4"
                android:singleLine="false"
                android:layout_below="@+id/spacer2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/settings_open"
                android:layout_below="@+id/textView4"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:adjustViewBounds="true"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin"
                android:layout_below="@+id/imageView"
                android:id="@+id/spacer3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/functions5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView5"
                android:layout_below="@+id/spacer3"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/settings"
                android:layout_below="@+id/textView5"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:adjustViewBounds="true"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin"
                android:layout_below="@+id/imageView2"
                android:id="@+id/spacer4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/functions6"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView6"
                android:layout_below="@+id/spacer4"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:layout_below="@+id/textView6"
                android:layout_alignParentStart="true"
                android:src="@drawable/sd_card"
                android:layout_alignParentEnd="true"
                android:adjustViewBounds="true"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin"
                android:layout_below="@+id/imageView3"
                android:id="@+id/spacer5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/functions7"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView7"
                android:layout_below="@+id/spacer5"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"/>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
